# OMQ

./: .env.example  pyproject.toml  requirements.txt  setup.py  tests.py
omq/: __init__.py  exceptions.py
